# dylan-game-engine

./: CMakeLists.txt  README.md
engine/src/: main.cpp
engine/src/core/: Application.cpp  Application.h  GameLoop.cpp  GameLoop.h  SDLContext.h
engine/src/ecs/components/: components.h  physics.h  player.h  render.h  transform.h
engine/src/ecs/systems/: input_system.h  movement_system.h  player_control_system.h  render_system.h  systems.h
engine/src/math/: mat3x3.h
engine/src/scene/: SceneComponents.h  SceneSystem.cpp  SceneSystem.h
